--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,9 @@
-altgraph==0.17.4
-packaging==24.1
-pefile==2023.2.7
-pyinstaller==6.11.0
-pyinstaller-hooks-contrib==2024.9
-PySide6==6.8.0.2
-PySide6_Addons==6.8.0.2
-PySide6_Essentials==6.8.0.2
-pywin32-ctypes==0.2.3
-shiboken6==6.8.0.2
+# Runtime dependencies for ReNight
+# Python baseline: 3.11
+#
+# Notes:
+# - PySide6 is the only runtime dependency. It pulls in shiboken6 and the
+#   Essentials/Addons wheels automatically, so those should not be listed here.
+# - Build tooling (e.g. Nuitka, PyInstaller) is intentionally not included.
+
+PySide6>=6.6,<7
